# serial-pcap

./: .gitignore  Cargo.toml  README.md
examples/: real_uarts_sim_chat.rs
meas/: 25m_manual_test.pcap  25m_manual_test1.pcap  25m_manual_test_east.pcap  onetouch_unzip.sh
meas/OneTouch-20230323/: OneTouch_2023-03-23_142448.csv  OneTouch_2023-03-23_142731.csv  OneTouch_2023-03-23_143204.csv  OneTouch_2023-03-23_144219.csv  OneTouch_2023-03-23_144234.csv  OneTouch_2023-03-23_144708.csv  OneTouch_2023-03-23_144722.csv  OneTouch_2023-03-23_144825.csv  OneTouch_2023-03-23_144831.csv  OneTouch_2023-03-23_144923.csv  OneTouch_2023-03-23_144936.csv
rp-rs422-cap/: .gitignore  Cargo.toml
rp-rs422-cap/.cargo/: config.toml
rp-rs422-cap/src/: disp_info.rs  lib.rs  main.rs  picodisplay.rs  x328_bus.rs
rp-rs422-cap/src/x328_bus/: encoders.rs  iobox.rs  mod.rs
src/: lib.rs  main.rs  x328_chat_test.rs
tests/: x328_chat_test.rs
wireshark/: x328-dissector.lua
