[package]
name = "serial-pcap"
version = "0.1.0"
authors = ["Lukas Sandström <lukas.sandstrom@chalmers.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
arrayvec = "0.7.2"
clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context","suggestions", "usage", "wrap_help", "std"]}
etherparse = { version = "0.13.0" }
rpcap = "1.0.0"
x328-proto = "0.1.2"
