[package]
name = "serial-pcap"
version = "0.1.0"
authors = ["Lukas Sandström <lukas.sandstrom@chalmers.se>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abort-on-drop = "0.2.2"
anyhow = "1.0.41"
arrayvec = "0.7.2"
bytes = "1.4.0"
clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context","suggestions", "usage", "wrap_help", "std"]}
ctrlc-async = "3.2.2"
etherparse = { version = "0.13.0" }
rpcap = "1.0.0"
tokio = { version = "1.21.0", features = ["full"] }
tokio-serial = "5.4.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
x328-proto = "0.1.2"
