[package]
edition = "2021"
name = "rp-rs422-cap"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
arrayvec = { version = "0.7.2" , default-features = false }
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.7"
panic-probe = "0.3.1"
rp-pico = { version = "0.7", features = ["critical-section-impl"] }
rp2040-monotonic = "1.2.0"
rp2040-hal = { version = "0.8.2" }

mipidsi = "0.7.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.0"

usb-device = "0.2.9"
usbd-serial = "0.1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
